# swagger.json
@@ -28,6 +28,10 @@
     {
       "name": "Clearing Bancario",
       "description": "Endpoints para manejo del clearing "
+    },
+    {
+      "name": "Tarjetas de credito",
+      "description": "Endpoints para manejo tarjetas de credito "
     }
   ],
   "consumes": ["application/json"],
@@ -94,6 +98,35 @@
       }
     },
 
+    "/altatarjetaM": {
+      "post": {
+        "tags": ["Tarjetas de credito"],
+        "summary": "Alta de pagos de consumos",
+        "requestBody": {
+          "description": "Alta de consumos",
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/definitions/Tarjetas"
+              }
+            }
+          }
+        },
+        "produces": ["application/json"],
+        "responses": {
+          "201": {
+            "description": "Consumo enviado correctamente",
+            "schema": {
+              "$ref": "#/definitions/id"
+            }
+          },
+          "400": {
+            "description": "Error al querer enviar el consumo"
+          }
+        }
+      }
+    },
      
     "/getEmpresaCUITEmpresa": {
       "post": {
@@ -121,6 +154,68 @@
           },
           "400": {
             "description": "Error al querer obtener el cuitEmpresa"
+          }
+        }
+      }
+    },
+
+    "/getTarjetaCodigo": {
+      "post": {
+        "tags": ["Tarjetas de credito"],
+        "summary": "Obtengo los consumos por codigo especifico",
+
+        "requestBody": {
+          "description": "El campo 'codigotransaccion' el indice de busqueda",
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/definitions/TarjetasC"
+              }
+            }
+          }
+        },
+        "produces": ["application/json"],
+        "responses": {
+          "200": {
+            "description": "consumo obtenido correctamente",
+            "schema": {
+              "$ref": "#/definitions/id"
+            }
+          },
+          "400": {
+            "description": "Error al querer obtener el consumo"
+          }
+        }
+      }
+    },
+
+    "/getSueldoCodigo": {
+      "post": {
+        "tags": ["Empresas - PagoSueldos"],
+        "summary": "Obtengo los sueldos por codigo especifico",
+
+        "requestBody": {
+          "description": "El campo 'codigo' el indice de busqueda",
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/definitions/SueldosC"
+              }
+            }
+          }
+        },
+        "produces": ["application/json"],
+        "responses": {
+          "200": {
+            "description": "Sueldo obtenido correctamente",
+            "schema": {
+              "$ref": "#/definitions/id"
+            }
+          },
+          "400": {
+            "description": "Error al querer obtener el sueldo"
           }
         }
       }
@@ -171,6 +266,22 @@
         }
       }
     },
+    "TarjetasC": {
+      "type": "object",
+      "properties": {
+        "codigotransaccion": {
+          "type": "string"
+        }
+      }
+    },
+    "SueldosC": {
+      "type": "object",
+      "properties": {
+        "codigo": {
+          "type": "string"
+        }
+      }
+    },
     "cuit": {
       "properties": {
         "cuit": {
@@ -203,6 +314,32 @@
           "type": "string"
         },
         "codigo": {
+          "type": "string"
+        },
+        "importe": {
+          "type": "integer"
+        },
+        "fechaPago": {
+          "type": "string"
+        },
+        "pagado": {
+          "type": "string"
+        },
+        "cbuEmpresa": {
+          "type": "string"
+        },        
+        "descripcion": {
+          "type": "string"
+        }
+      }
+    },
+    "Tarjetas": {
+      "type": "object",
+      "properties": {
+        "cuit": {
+          "type": "string"
+        },
+        "codigotransaccion": {
           "type": "string"
         },
         "importe": {
